# message_serialization

./: CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: main.yml
include/message_serialization/: binary_serialization.h  eigen_yaml.h  geometry_msgs_yaml.h  sensor_msgs_yaml.h  serialize.h  shape_msgs_yaml.h  trajectory_msgs_yaml.h
scripts/: message_converter.py
test/: geometry_msgs_test.h  sensor_msgs_test.h  shape_msgs_test.h  std_msgs_test.h  trajectory_msgs_test.h  utest.cpp  utilities.h
