<?xml version="1.0"?>
<package format="2">
  <name>message_serialization</name>
  <version>0.0.0</version>
  <description>The message_serialization package</description>

  <author email="jmeyer@swri.org">Jon Meyer</author>
  <author email="mripperger@swri.org">Michael Ripperger</author>
  <maintainer email="mripperger@swri.org">Michael Ripperger</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp_serialization</depend>
  <depend>trajectory_msgs</depend>
  <depend>yaml-cpp</depend>
  <exec_depend>rospy_message_converter</exec_depend>
</package>
